--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "cookie": "^0.5.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "firebase-admin": "^11.6.0"
+    "firebase-admin": "^11.6.0",
+    "nodemon": "^2.0.22"
   },
   "engines": {
     "node": "16"
